# Switchyard

./: .coderabbit.yaml  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .sir-merge-a-lot.yml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  INSTALLATION.md  LICENSE  NOTICE  README.md  SECURITY.md  mkdocs.yml  mkdocs_hooks.py  pyproject.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.hooks/: add_spdx_headers.py  detect_nvidia_api_key.py
benchmark/: DATASETS.md  README.md  agent-versions.env  codex_model_catalog.py  prepare_harbor_dataset.py  resolve_classifier_prompts.py  run-baseline.sh  run_manifest.py  switchyard-server.Dockerfile  tb_lite_subset_20.txt
crates/switchyard-components/: Cargo.toml
crates/switchyard-components-v2/: Cargo.toml  DESIGN.md
crates/switchyard-components-v2-macros/: Cargo.toml
crates/switchyard-components-v2-macros/src/: lib.rs
crates/switchyard-components-v2/src/: backend.rs  config.rs  lib.rs  profile.rs  stats.rs
crates/switchyard-components-v2/src/config/: loading.rs  parsing.rs  resolving.rs
crates/switchyard-components-v2/src/profiles/: cascade.rs  llm_routing.rs  macros.rs  mod.rs  noop.rs  passthrough.rs  profile_types.rs  random_routing.rs
crates/switchyard-components-v2/src/profiles/latency_service/: health.rs  mod.rs  polling.rs  selection.rs  tests.rs
crates/switchyard-components-v2/src/profiles/llm_routing/prompts/: coding_agent.md  general.md  openclaw.md
crates/switchyard-components-v2/tests/: cascade_profile.rs  config.rs  latency_service_profile.rs  llm_routing_profile.rs  passthrough_profile.rs  random_routing_profile.rs
crates/switchyard-components/src/: intake.rs  lib.rs  telemetry.rs
crates/switchyard-components/src/backends/: anthropic.rs  common.rs  context_overflow.rs  mod.rs  multi.rs  openai.rs  selection.rs  stats.rs
crates/switchyard-components/src/dimension_collector/: config.rs  mod.rs  scorers.rs  tool_signals.rs
crates/switchyard-components/src/dimension_collector/response/: checks.rs  mod.rs
crates/switchyard-components/src/intake/: client.rs  config.rs  context.rs  payload.rs
crates/switchyard-components/src/request_processors/: dimension_collector.rs  intake.rs  mod.rs  random_routing.rs  stats.rs
crates/switchyard-components/src/response_processors/: intake.rs  mod.rs  response_signals.rs  stats.rs
crates/switchyard-components/src/stats/: accumulator.rs  cache_eligibility.rs  context.rs  cost.rs  mod.rs  usage.rs
crates/switchyard-components/tests/: adversarial_multi_llm_backend.rs  adversarial_native_backends.rs  adversarial_random_routing.rs  intake_http_sink.rs  intake_payload.rs  intake_request_processor.rs  intake_response_processor.rs  nvdataflow_live.rs  stats_accumulator.rs  stats_processors.rs  stats_usage_shapes.rs
crates/switchyard-components/tests/support/: config.rs  intake.rs  mod.rs
crates/switchyard-core/: Cargo.toml
crates/switchyard-core/src/: backend.rs  context.rs  error.rs  ids.rs  lib.rs  roles.rs  session.rs  types.rs
crates/switchyard-core/tests/: adversarial_types.rs
crates/switchyard-py/: Cargo.toml
crates/switchyard-py/src/: component_bindings.rs  core_bindings.rs  errors.rs  lib.rs  py_serde.rs  server_bindings.rs  translation.rs
crates/switchyard-py/src/component_bindings/: backends.rs  config.rs  dimension_collector.rs  intake.rs  request_processors.rs  response_processors.rs  stats.rs
crates/switchyard-py/src/core_bindings/: context.rs  request.rs  response.rs  roles.rs  session.rs
crates/switchyard-py/src/profile_bindings/: mod.rs  typed.rs
crates/switchyard-server/: Cargo.toml
crates/switchyard-server/src/: cli.rs  lib.rs  main.rs  registry.rs  response.rs  sse.rs
crates/switchyard-server/tests/: profile_migration.rs  server.rs
crates/switchyard-skill-distillation/: Cargo.toml
crates/switchyard-skill-distillation/src/: error.rs  ids.rs  lib.rs  model.rs  ports.rs
crates/switchyard-skill-distillation/tests/: contracts.rs
crates/switchyard-translation/: Cargo.toml
crates/switchyard-translation/src/: diagnostic.rs  engine.rs  error.rs  format.rs  ir.rs  lib.rs  policy.rs  stream.rs  util.rs
crates/switchyard-translation/src/codecs/: common.rs  mod.rs  stream.rs
crates/switchyard-translation/src/codecs/anthropic/: buffered.rs  mod.rs  stream.rs
crates/switchyard-translation/src/codecs/openai_chat/: buffered.rs  mod.rs  stream.rs
crates/switchyard-translation/src/codecs/responses/: buffered.rs  mod.rs  stream.rs
crates/switchyard-translation/tests/: extension_points.rs  lossless_roundtrip.rs  request_translation.rs  response_translation.rs  stream_translation.rs
docs/: Makefile  architecture.md  cli_reference.md  getting_started.md  index.md  known_issues.md  skill_distillation.md
examples/: minimal.py  profiles.yaml  python_profile.yaml  route.yaml  secrets.template.json  utils.py
switchyard/: __init__.py  telemetry.py
switchyard_rust/: __init__.py  components.py  components.pyi  core.py  profiles.py  profiles.pyi  server.py  translation.py
tests/: __init__.py  _chain_test_helpers.py  conftest.py  e2e_multiturn_responses.py  test_anthropic_cache_breakpoint_backend.py  test_anthropic_native_llm_backend.py  test_anthropic_openai_translation.py  test_anthropic_output_config_strip.py  test_anthropic_probe.py  test_backend_format_resolver.py  test_build_and_serve.py  test_cascade_classifier.py  test_cascade_pickers.py  test_cascade_profile.py  test_cascade_request_processor.py  test_cascade_scorer.py  test_chat_request.py  test_chat_response.py  test_classifier_planner_chain.py  test_cli_reference_docs.py  test_cli_stale_names.py  test_cli_version.py  test_codex_multiturn_traces.py  test_configure_model_picker_inputs.py  test_context_error_translation.py  test_context_window_exceeded_endpoint.py  test_cost_estimator_gemini.py  test_deterministic_route_signals.py  test_deterministic_routing_cache_wrapping.py  test_deterministic_routing_profile.py  test_dimension_collector.py  (+101 more)
(+241 files in other folders)
