[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "nemo-switchyard"
version = "0.1.0"
description = "Typed, composable LLM routing with request/response translation and multi-backend orchestration"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "NVIDIA Corporation" }]
maintainers = [{ name = "NVIDIA Corporation" }]
keywords = ["llm", "switchyard", "routing", "routellm", "openai", "nemo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core dependencies — minimal set for the foundation library (core/ + recipes/).
# No server, CLI, ML, GPU, or orchestrator packages.
# Users install extras based on their use case:
#   pip install nemo-switchyard                 # Core + recipes only
#   pip install nemo-switchyard[server]         # Add FastAPI/Uvicorn for e2e
#   pip install nemo-switchyard[cli]            # Add prompt-toolkit for CLI
#   pip install nemo-switchyard[all]            # Everything
dependencies = [
    "openai>=2.34.0,<3.0",
    "anthropic>=0.99.0,<1.0",
    "httpx>=0.28.1,<1.0",
    "pydantic>=2.13.3,<3.0",
]

[project.optional-dependencies]
# Server dependencies — FastAPI + Uvicorn for e2e users who want to run
# switchyard as a proxy. Not needed for library-only usage.
server = [
    "fastapi>=0.136.1,<1.0",
    "uvicorn[standard]>=0.46.0,<1.0",
    "sse-starlette>=3.4.1,<4.0",
]

# CLI dependencies — prompt-toolkit for Claude Code launcher and ShellTUI.
# Only needed for users running the switchyard CLI.
cli = [
    "prompt-toolkit>=3.0.52,<4.0",
]

# GPU / ML stack needed for RouteLLM-based routing (RouteLLMFactory
# and RouteLLMRequestProcessor). Also used by the random-routing
# usage-case. Drags torch, transformers, scikit-learn, scipy, tokenizers,
# datasets, pandas, pyarrow, numpy — ~800 MB of wheels. Named ``gpu``
# because that's the real cost the user opts into.
#
# ``transformers>=5.8.0`` is a security floor, not a feature requirement:
# routellm itself doesn't pin transformers, and several pre-5.x releases
# carry known CVEs. Keep this floor in lockstep with the latest secure
# transformers release; bump on every routine dependency refresh.
gpu = [
    "routellm[serve]>=0.2.0,<1.0",
    "transformers>=5.8.0",
]

# Tracing — ddtrace for Datadog APM spans on the proxy routing path
# Optional: ``switchyard.lib.tracing`` no-ops when ddtrace is not
# importable, so the default install and non-Datadog deployments are unaffected
# and pay no overhead.
tracing = [
    "ddtrace>=2.9,<4",
]

# Intake — NeMo Platform SDK required by IntakeClient for telemetry capture.
# Only needed when --intake-enabled is passed to ``switchyard launch``.
# Install with: pip install nemo-switchyard[intake]
intake = [
    "nemo-platform>=0.1.0,<1.0",
]

# Everything — all optional dependencies for full-featured deployment.
all = [
    "nemo-switchyard[server,cli,gpu,tracing,intake]",
]

# Dev tooling lives in a PEP 735 dependency group rather than an optional
# extra so it is not advertised in the published wheel's METADATA. This
# keeps pytest / ruff / mypy / pygments-via-pytest out of downstream
# vulnerability scans, since they're never installed by `pip install
# switchyard` or any of the user-facing extras above.
#
# Install dev tooling with `uv sync` (the `dev` group is uv's default and
# is installed automatically) or `uv sync --group dev` to be explicit.
# With pip >= 25.1, use `pip install --group dev .` from a checkout.
[dependency-groups]
dev = [
    "maturin>=1.9,<2.0",
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=1.3.0,<2.0",
    "pytest-cov>=7.1.0,<8.0",
    "pytest-mock>=3.15.1,<4.0",
    "pytest-timeout>=2.4.0,<3.0",
    "respx>=0.23.1,<1.0",
    "ruff>=0.15.12,<1.0",
    "mypy>=1.20.2,<2.0",
    "httpx>=0.28.1,<1.0",
    "socksio>=1.0.0,<2.0",
    "prometheus-client>=0.21.0,<1.0",
    # Harbor is needed for local evaluation runs and supports the package floor.
    # Package users still do not see it in published metadata.
    "harbor @ git+https://github.com/harbor-framework/harbor.git@v0.6.4 ; python_version >= '3.12'",
    "nemo-switchyard[server]",
    "pytest-markdown-docs>=0.9.2",
]
docs = [
    "mkdocs>=1.6.0,<2.0",
    "mkdocs-material>=9.5.0,<10.0",
    "watchdog>=4.0.0,<5.0",
]

[tool.uv]
managed = true

[project.scripts]
switchyard = "switchyard.cli.switchyard_cli:main"

[project.urls]
Homepage = "https://github.com/NVIDIA-NeMo/Switchyard"
Repository = "https://github.com/NVIDIA-NeMo/Switchyard"
Issues = "https://github.com/NVIDIA-NeMo/Switchyard/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["switchyard*"]

[tool.setuptools.package-data]
switchyard = ["py.typed", "lib/processors/cascade/prompts/*.md"]
switchyard_rust = ["py.typed", "*.pyi"]

[tool.maturin]
manifest-path = "crates/switchyard-py/Cargo.toml"
module-name = "switchyard_rust._switchyard_rust"
python-source = "."
python-packages = ["switchyard", "switchyard_rust"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 120  # Default timeout for all tests (2 minutes)
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "perf: marks tests as performance benchmarks (deselect with '-m \"not perf\"')",
]
# For integration/production tests, recommend using -x to stop on first failure:
#   pytest tests/offline_production_tests/ -v -x
addopts = "-x"  # Stop on first failure by default (use --no-x to override)

[tool.mypy]
python_version = "3.12"
strict = true
files = ["switchyard", "switchyard_rust"]
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
ignore_missing_imports = true

# Problem 2 scoreboard: every `data: Any` annotation is a tracked error.
# 303 violations today — each one fixed = one step toward typed chain.
# Disabled for open-source release; can be re-enabled as part of gradual typing effort.
# disallow_any_explicit = true

# Readability
pretty = true
show_error_codes = true
show_column_numbers = true

# TODO: enable after Phase 6 migration (3,271 violations today)
# disallow_any_expr = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pyright]
include = ["switchyard"]
exclude = [
    ".agents",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".worktrees",
    "build",
    "tests",
]
pythonVersion = "3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".agents", ".worktrees"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4"]
# Keep runtime compatibility aliases and existing generics stable in this
# packaging PR. PEP 695 aliases are not drop-in replacements for public class
# aliases, and `StrEnum` changes enum stringification.
ignore = ["E501", "UP040", "UP042", "UP046", "UP047"]

[tool.ruff.lint.isort]
known-first-party = ["switchyard"]
