# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "switchyard-components-v2"
version = "0.1.0"
description = "Experimental flatter Switchyard component profile runtime"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1"
parking_lot = "0.12"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
switchyard-components = { path = "../switchyard-components" }
switchyard-components-v2-macros = { path = "../switchyard-components-v2-macros" }
switchyard-core = { path = "../switchyard-core" }
toml = "0.8"
tracing = { version = "0.1", default-features = false, features = ["std"] }
yaml_serde = "0.10"

[dev-dependencies]
futures-core = "0.3"
tokio = { version = "1", features = ["macros", "rt", "sync"] }
