# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "switchyard-components"
version = "0.1.0"
description = "Concrete Switchyard backends and processors"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
futures-util = "0.3"
parking_lot = "0.12"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
switchyard-core = { path = "../switchyard-core" }
switchyard-translation = { path = "../switchyard-translation" }
tokio = { version = "1", features = ["rt", "sync"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync"] }
