# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "switchyard-core"
version = "0.1.0"
description = "Core contracts for Switchyard's Rust implementation"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1"
futures-core = "0.3"
lru = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = { version = "0.1", default-features = false, features = ["std"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync"] }
