# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "switchyard-py"
version = "0.1.0"
description = "PyO3 bindings for Switchyard Rust crates"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "_switchyard_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
pyo3 = { version = "0.28.3", features = ["abi3-py312", "extension-module"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
pythonize = "0.28.0"
serde = "1"
serde_json = "1"
switchyard-core = { path = "../switchyard-core" }
switchyard-components = { path = "../switchyard-components" }
switchyard-components-v2 = { path = "../switchyard-components-v2" }
switchyard-server = { path = "../switchyard-server" }
switchyard-translation = { path = "../switchyard-translation" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
