# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "switchyard-server"
version = "0.1.0"
description = "Rust HTTP server surface for Switchyard profiles"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-stream = "0.3"
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
switchyard-components-v2 = { path = "../switchyard-components-v2" }
switchyard-core = { path = "../switchyard-core" }
switchyard-translation = { path = "../switchyard-translation" }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }

[dev-dependencies]
async-trait = "0.1"
http-body-util = "0.1"
tokio = { version = "1", features = ["macros", "rt", "net"] }
tower = { version = "0.5", features = ["util"] }
